luckybreak/static/less/project.less
/**
 * Project less file.
 * Shared across all pages of the site.
 */
html {
  font-family: Raleway, Calibri, Trebuchet, sans-serif;
  color: #424242;
}

nav.top {
  a { font-weight: bold; }
}

nav {
  -webkit-transition: background-color 500ms linear;
  -moz-transition: background-color 500ms linear;
  -o-transition: background-color 500ms linear;
  -ms-transition: background-color 500ms linear;
  transition: background-color 500ms linear;

  -webkit-transition: -webkit-box-shadow 500ms linear;
  transition: box-shadow 500ms linear;
  z-index: 2;

  .brand-logo {
    font-weight: bold;
  }

  #signout-dd {
    min-width: 180px;
  }

  a {
    -webkit-transition: color 300ms linear;
    -moz-transition: color 300ms linear;
    -o-transition: color 300ms linear;
    -ms-transition: color 300ms linear;
    transition: color 300ms linear;

  }
  .dropdown-content a {
    color: #424242 !important;
    font-weight: normal;
    &:hover {
      background-color: rgba(0,0,0,0.1) !important;
    }
  }

  &.crumbs {
    box-shadow: none;
    background-color: transparent;
    
    a {
      color: #039be5;

      &:last-child {
        color: #757575;
      }

      &:before {
        color: #bdbdbd;
      }
    }

  }
}

.section-header {
  font-weight: bold;
}

.top-align {
  margin-top: 0;
}
.alert-row {
  margin-bottom: 0;
}

.btn {
  &.facebook {
    background-color: #3B5998;
    margin-bottom: 10px;
    width: 100%;
  }

  &.twitter {
    background-color: #2FC2EF;
    margin-bottom: 10px;
    width: 100%;
  }
}

.toast {
  &.info {
    background-color: #64b5f6;
  }
  &.success {
    background-color: #81c784;
  }
  &.warning {
    background-color: #ff8a65;
  }
  &.error {
    background-color: #ef5350;
  }
}

